# frappe-next-js

./: MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
frappe_next_js/: hooks.py  modules.txt  spa_page.py
frappe_next_js/commands/: __init__.py  boilerplates.py  nextjs_generator.py  utils.py
frappe_next_js/config/: __init__.py  desktop.py
frappe_next_js/frappe_next_js/: __init__.py
frappe_next_js/templates/: __init__.py
frappe_next_js/tests/: __init__.py  test_nextjs_generator.py
libs/frappe/: auth.js  call.js  hooks.js  index.js  socket.js
